# vst_monster

./: .gitignore  CHANGELOG.md  DEPLOY.md  HANDOFF.md  IDEAS.md  MEMORY.md  README.md  ROADMAP.md  TODO.md  VISION.md  start.sh
client/: package-lock.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: installer.rs  lib.rs
client/src/routes/: +page.svelte
crawler/: db.go  downloader.go  downloader_test.go  go.mod  go.sum  main.go  main_test.go  models.go  models_test.go  proxy.go  proxy_test.go
crawler/config/: config.go
crawler/parser/: normalize.go
crawler/queue/: worker.go
crawler/scraper/: github.go  github_test.go  kvr.go  kvr_test.go
crawler/scrapers/: bpb.go  github.go  kvr.go
registry/: package-lock.json  package.json  schema.sql
registry/src/: index.js  index.js.map  index.ts
